--- a/css/style.css
+++ b/css/style.css
@@ -1409,6 +1409,12 @@ body::-webkit-scrollbar {
 
 /* tabs container  */
 
+
+/* institution css  */
+
+/* instiution css  */
+
+
 @media (min-width: 1200px) and (max-width: 1600px) {
     .icon-menu-mobile {
         display: none;
