--- a/css/backup.css
+++ b/css/backup.css
@@ -176,15 +176,24 @@ body::-webkit-scrollbar {
 
 .section-second-container {
     width: 100%;
-    /* background: linear-gradient(180deg, #FFFFFF 30.29%, #FFE6A1 100%); */
-    background-color: #FFF8F0;
+    background: linear-gradient(180deg, #FFFFFF 30.29%, #FFE6A1 100%);
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 2rem;
-    padding: 2rem 6rem 3rem 6rem;
+    padding: 0.5rem 6rem 6rem 6rem;
     margin-top: 4rem;
 }
 
+.index-features-container {
+    border: 2px solid #FFD666;
+    padding: 3rem 4rem;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 5px rgb(194, 194, 194);
+    ;
+}
 
 .reallives-change-text {
     font-weight: 500;
@@ -206,7 +215,13 @@ body::-webkit-scrollbar {
     gap: 1rem;
 }
 
-
+.box-card-data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+}
 
 .icon-card {
     width: 40px;
@@ -1422,43 +1437,6 @@ body::-webkit-scrollbar {
 
 /* Update website css  */
 
-.second-description-label {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.card-index-features-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 2rem;
-    padding: 0rem 7rem;
-}
-
-.cards-detail-box {
-    background-color: #FFFFFF;
-    border: 2px solid #FFD191;
-    border-radius: 6px;
-    padding: 1rem;
-    display: grid;
-    grid-template-rows: 38% 1fr;
-    gap: 1rem;
-}
-
-.features-text-card {
-    font-weight: 500;
-    font-size: 24px;
-    color: #D47A00;
-}
-
-.features-description-text {
-    font-weight: 400;
-    font-size: 18px;
-    color: #444444;
-}
-
 
 
 /* Update website css  */
@@ -1784,12 +1762,20 @@ body::-webkit-scrollbar {
         height: max-content !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
     .icon-features-section-container {
         gap: 1rem;
     }
 
     .description-features-bottom {
         font-size: 15px;
+    }
+
+    .box-card-data {
+        gap: 2rem;
     }
 
     .title-of-card {
@@ -2121,6 +2107,10 @@ body::-webkit-scrollbar {
         height: max-content !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
     .icon-features-section-container {
         gap: 1rem;
     }
@@ -2129,9 +2119,14 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 2rem;
+    }
+
     .title-of-card {
         font-size: 17px;
     }
+
 
     .icon-card {
         width: 30px;
@@ -2467,6 +2462,9 @@ body::-webkit-scrollbar {
         height: max-content !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
 
     .icon-features-section-container {
         gap: 1rem;
@@ -2476,7 +2474,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
-
+    .box-card-data {
+        gap: 2rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -2787,6 +2787,10 @@ body::-webkit-scrollbar {
         height: max-content !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
     .icon-features-section-container {
         gap: 1rem;
     }
@@ -2795,9 +2799,14 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 2rem;
+    }
+
     .title-of-card {
         font-size: 17px;
     }
+
 
     .icon-card {
         width: 30px;
@@ -3125,7 +3134,9 @@ body::-webkit-scrollbar {
         height: max-content !important;
     }
 
-
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
 
     .icon-features-section-container {
         gap: 1rem;
@@ -3135,6 +3146,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 1rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -3462,7 +3476,9 @@ body::-webkit-scrollbar {
         height: 20rem !important;
     }
 
-
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
 
     .icon-features-section-container {
         gap: 1rem;
@@ -3472,6 +3488,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 1rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -3791,6 +3810,9 @@ body::-webkit-scrollbar {
         height: 18rem !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
 
     .icon-features-section-container {
         gap: 1rem;
@@ -3800,6 +3822,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 2rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -4114,6 +4139,10 @@ body::-webkit-scrollbar {
         height: 18rem !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
     .icon-features-section-container {
         gap: 1rem;
     }
@@ -4122,6 +4151,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 2rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -4439,6 +4471,9 @@ body::-webkit-scrollbar {
         height: 18rem !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
 
     .icon-features-section-container {
         gap: 1rem;
@@ -4448,6 +4483,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 1rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -4765,7 +4803,9 @@ body::-webkit-scrollbar {
         height: 17rem !important;
     }
 
-
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
 
     .icon-features-section-container {
         gap: 1rem;
@@ -4775,7 +4815,9 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
-
+    .box-card-data {
+        gap: 1rem;
+    }
 
     .title-of-card {
         font-size: 17px;
@@ -5093,6 +5135,10 @@ body::-webkit-scrollbar {
         height: 17rem !important;
     }
 
+    .index-features-container {
+        padding: 1rem 1rem;
+    }
+
     .icon-features-section-container {
         gap: 1rem;
     }
@@ -5101,9 +5147,14 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 1rem;
+    }
+
     .title-of-card {
         font-size: 17px;
     }
+
 
     .icon-card {
         width: 30px;
@@ -5410,8 +5461,13 @@ body::-webkit-scrollbar {
         font-size: 16px;
     }
 
+
     .image-height {
         height: 18rem !important;
+    }
+
+    .index-features-container {
+        padding: 1rem 1rem;
     }
 
     .icon-features-section-container {
@@ -5422,9 +5478,14 @@ body::-webkit-scrollbar {
         font-size: 15px;
     }
 
+    .box-card-data {
+        gap: 1rem;
+    }
+
     .title-of-card {
         font-size: 14px;
     }
+
 
     .icon-card {
         width: 30px;
