--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body::-webkit-scrollbar {
 
 
 .navigation-bar {
-    padding: 1rem 4rem;
+    padding: 0.5rem 4rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -226,11 +226,12 @@ body::-webkit-scrollbar {
 }
 
 .changes-maker-section-index {
-    padding: 1rem 6rem 6rem 6rem;
-    background: linear-gradient(180deg, #FFE6A1 30.29%, #FFFFFF 100%);
+    padding: 1rem 0rem 6rem 0rem;
+    /* background: linear-gradient(180deg, #FFE6A1 30.29%, #FFFFFF 100%); */
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    /* height: 100vh; */
+    position: relative;
 }
 
 .experience-text-reallives {
@@ -245,13 +246,14 @@ body::-webkit-scrollbar {
     height: 100%;
 }
 
+/* 
 .rcmi-embed-cdn {
     width: 100%;
     height: 70vh;
     display: flex;
     justify-content: center;
 
-}
+} */
 
 .impact-section-container {
     /* padding: 10px; */
@@ -1459,6 +1461,38 @@ body::-webkit-scrollbar {
     color: #444444;
 }
 
+.features-index-absolute {
+    width: 100%;
+    position: absolute;
+    top: 5%;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.outer-rcmi-wrapper {
+    width: 100%;
+    height: 100%;
+    /* background-color: lightblue; */
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3rem 20rem;
+}
+
+.rcmi-embed-cdn {
+    width: 100%;
+    height: 100%;
+
+}
+
+.border-radius-4 {
+    border-radius: 4px;
+}
 
 
 /* Update website css  */
@@ -1473,9 +1507,9 @@ body::-webkit-scrollbar {
 
 @media (max-width: 1280px) {
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: 55vh;
-    }
+    } */
 
     .sdg-container-imapct-tab {
         padding: 10px 4rem;
@@ -1609,9 +1643,9 @@ body::-webkit-scrollbar {
         padding: 10px 1rem;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: 50vh;
-    }
+    } */
 }
 
 @media (max-width: 991px) {
@@ -1741,9 +1775,9 @@ body::-webkit-scrollbar {
         padding: 1rem 1rem 1rem 1rem;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: 50vh;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -2078,9 +2112,9 @@ body::-webkit-scrollbar {
         padding: 1rem 1rem 1rem 1rem;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: 50vh;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -2424,9 +2458,9 @@ body::-webkit-scrollbar {
         display: none;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -2743,9 +2777,10 @@ body::-webkit-scrollbar {
         display: none;
     }
 
+    /* 
     .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -3081,9 +3116,9 @@ body::-webkit-scrollbar {
         display: none;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -3418,9 +3453,9 @@ body::-webkit-scrollbar {
         display: none;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -3747,9 +3782,10 @@ body::-webkit-scrollbar {
         display: none;
     }
 
+    /* 
     .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -4071,9 +4107,10 @@ body::-webkit-scrollbar {
         display: none;
     }
 
+    /* 
     .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -4395,9 +4432,10 @@ body::-webkit-scrollbar {
         display: none;
     }
 
+    /* 
     .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -4721,9 +4759,9 @@ body::-webkit-scrollbar {
         display: none;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -5049,9 +5087,9 @@ body::-webkit-scrollbar {
         display: none;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
@@ -5371,9 +5409,9 @@ body::-webkit-scrollbar {
         display: none;
     }
 
-    .rcmi-embed-cdn {
+    /* .rcmi-embed-cdn {
         height: max-content;
-    }
+    } */
 
     .card-info-box {
         grid-template-rows: 1fr;
