--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ body::-webkit-scrollbar {
 }
 
 .changes-maker-section-index {
-    padding: 1rem 0rem 6rem 0rem;
+    padding: 1rem 0rem 0rem 0rem;
     /* background: linear-gradient(180deg, #FFE6A1 30.29%, #FFFFFF 100%); */
     display: flex;
     flex-direction: column;
@@ -239,6 +239,7 @@ body::-webkit-scrollbar {
     font-size: 28px;
     color: #111111;
     text-align: center;
+    margin-top: 2%;
 }
 
 .width-100 {
@@ -258,6 +259,7 @@ body::-webkit-scrollbar {
 .impact-section-container {
     /* padding: 10px; */
     /* background: linear-gradient(180deg, #FFFFFF 0%, #FFE7A4 100%); */
+    background-color: #FFF7EB;
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 1rem;
@@ -280,12 +282,20 @@ body::-webkit-scrollbar {
 
 .card-info-box {
     display: grid;
-    grid-template-rows: 1fr 30%;
-    gap: 3rem;
+    grid-template-rows: 1fr 35%;
+    gap: 1rem;
+    background-color: #FFFFFF;
+    padding: 1rem;
+    border-radius: 6px;
+    box-shadow: 0px 0px 12px 0px #00000040;
+
 }
 
 .btn-larne-more {
-    padding: 1rem 6rem 2rem 6rem;
+    padding: 1rem 1rem 1rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .university-image-box {
@@ -323,38 +333,55 @@ body::-webkit-scrollbar {
 }
 
 .container-benifit-school {
-    padding: 4rem 6rem 4rem 7rem;
-    background-color: #FFF0DA;
+    position: relative;
+
+}
+
+.benifits-container-inner {
+    padding: 1rem 7rem;
     display: grid;
     grid-template-rows: auto 1fr;
-    gap: 2rem;
-
+    gap: 1rem;
+    position: absolute;
+    top: 0;
 }
 
 .benifit-box-school-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 4rem;
+    gap: 2rem;
+    margin-top: 2%;
 }
 
 .benifit-title-text {
     font-weight: 500;
     font-size: 28px;
     color: #111111;
-    margin-bottom: 1.5rem;
+    text-align: center;
 }
 
 .benifit-cards-box {
     display: grid;
     grid-template-rows: auto 1fr;
     gap: 1rem;
+    border: 2px solid #FFB754;
+    box-shadow: 0px 0px 4px 0px #00000040;
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: white;
 }
 
 .top-benfit-header {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    background-color: #FFE9CC;
+    border-bottom: 2px solid #FFB754;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
 
 .bottom-data-benifit {
@@ -363,13 +390,13 @@ body::-webkit-scrollbar {
 
 .header-title-side-text {
     font-weight: 400;
-    font-size: 22px;
+    font-size: 20px;
     color: #111111;
 }
 
 .bottom-data-benifit-description {
     font-weight: 400;
-    font-size: 19px;
+    font-size: 17px;
     color: #4D4D4D;
     line-height: 27px;
 
