--- a/css/style.css
+++ b/css/style.css
@@ -288,8 +288,8 @@ body::-webkit-scrollbar {
     padding: 1rem;
     border-radius: 6px;
     box-shadow: 0px 0px 12px 0px #00000040;
-
 }
+
 
 .btn-larne-more {
     padding: 1rem 1rem 1rem 1rem;
@@ -359,6 +359,8 @@ body::-webkit-scrollbar {
     font-size: 28px;
     color: #111111;
     text-align: center;
+    background-color: white;
+    padding: 5px;
 }
 
 .benifit-cards-box {
@@ -1521,6 +1523,11 @@ body::-webkit-scrollbar {
     border-radius: 4px;
 }
 
+.layer-parent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /* Update website css  */
 
