--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 1rem;
 }
 
 .university-image-box {
