--- a/css/style.css
+++ b/css/style.css
@@ -1582,10 +1582,136 @@ body::-webkit-scrollbar {
   }
 }
 
+@media (max-width: 1440px) {
+  .card-info-container {
+    gap: 2rem;
+  }
+
+  .description-water-background {
+    font-size: 25px;
+  }
+
+  .section-second-container {
+    margin-top: 0rem;
+  }
+
+  .image-cover-class {
+    height: 66vh;
+  }
+}
+
+@media (max-width: 1368px) {
+  /* new update css  */
+
+  .inner-section-container {
+    gap: 1rem;
+  }
+
+  .card-info-container {
+    padding: 10px 1rem;
+    gap: 1rem;
+  }
+
+  .card-info-box {
+    grid-template-rows: 1fr 52%;
+  }
+
+  .outer-rcmi-wrapper {
+    padding: 3rem 16rem;
+  }
+
+  .button-changes-container {
+    margin-top: 0rem;
+  }
+
+  .benifits-container-inner {
+    padding: 1rem 3rem;
+  }
+
+  .image-cover-class {
+    height: 51vh;
+  }
+
+  .card-index-features-container {
+    padding: 0rem 0rem;
+  }
+
+  .section-first-container {
+    height: min-content;
+  }
+  .title-section-1 {
+    font-size: 35px;
+    line-height: 3rem;
+  }
+  .description-water-background {
+    font-size: 25px;
+  }
+  .mobile-hight-image {
+    height: 10vh;
+  }
+  .section-second-container {
+    margin-top: 0rem;
+    padding: 2rem 3rem 3rem 3rem;
+  }
+
+  /* new update css  */
+}
+
 @media (max-width: 1280px) {
-  /* .rcmi-embed-cdn {
-        height: 55vh;
-    } */
+  /* new update css  */
+
+  .inner-section-container {
+    gap: 1rem;
+  }
+
+  .card-info-container {
+    padding: 10px 1rem;
+    gap: 1rem;
+  }
+
+  .card-info-box {
+    grid-template-rows: 1fr 52%;
+  }
+
+  .outer-rcmi-wrapper {
+    padding: 3rem 16rem;
+  }
+
+  .button-changes-container {
+    margin-top: 0rem;
+  }
+
+  .benifits-container-inner {
+    padding: 1rem 3rem;
+  }
+
+  .image-cover-class {
+    height: 75vh;
+  }
+
+  .card-index-features-container {
+    padding: 0rem 0rem;
+  }
+
+  .section-first-container {
+    height: min-content;
+  }
+  .title-section-1 {
+    font-size: 35px;
+    line-height: 3rem;
+  }
+  .description-water-background {
+    font-size: 24px;
+  }
+  .mobile-hight-image {
+    height: 13vh;
+  }
+  .section-second-container {
+    margin-top: 0rem;
+    padding: 2rem 3rem 3rem 3rem;
+  }
+
+  /* new update css  */
 
   .sdg-container-imapct-tab {
     padding: 10px 4rem;
@@ -1613,6 +1739,61 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 1180px) {
+  /* new update css  */
+
+  .inner-section-container {
+    gap: 1rem;
+  }
+
+  .card-info-container {
+    padding: 10px 1rem;
+    gap: 1rem;
+  }
+
+  .card-info-box {
+    grid-template-rows: 1fr 52%;
+  }
+
+  .outer-rcmi-wrapper {
+    padding: 3rem 16rem;
+  }
+
+  .button-changes-container {
+    margin-top: 0rem;
+  }
+
+  .benifits-container-inner {
+    padding: 1rem 3rem;
+  }
+
+  .image-cover-class {
+    height: 93vh;
+  }
+
+  .card-index-features-container {
+    padding: 0rem 0rem;
+  }
+
+  .section-first-container {
+    height: min-content;
+  }
+  .title-section-1 {
+    font-size: 35px;
+    line-height: 3rem;
+  }
+  .description-water-background {
+    font-size: 21px;
+  }
+  .mobile-hight-image {
+    height: 13vh;
+  }
+  .section-second-container {
+    margin-top: 0rem;
+    padding: 2rem 3rem 3rem 3rem;
+  }
+
+  /* new update css  */
+
   .child-changemaker-container {
     gap: 1rem;
   }
@@ -1721,7 +1902,81 @@ body::-webkit-scrollbar {
     } */
 }
 
+@media (max-width: 1024px) {
+  .inner-section-container {
+    gap: 1rem;
+  }
+
+  .card-info-container {
+    padding: 10px 1rem;
+    gap: 1rem;
+  }
+
+  .card-info-box {
+    grid-template-rows: 1fr 52%;
+  }
+
+  .outer-rcmi-wrapper {
+    padding: 3rem 16rem;
+  }
+
+  .button-changes-container {
+    margin-top: 0rem;
+  }
+
+  .benifits-container-inner {
+    padding: 1rem 3rem;
+  }
+
+  .image-cover-class {
+    height: 93vh;
+  }
+
+  .card-index-features-container {
+    padding: 0rem 0rem;
+  }
+
+  .section-first-container {
+    height: min-content;
+  }
+  .title-section-1 {
+    font-size: 35px;
+    line-height: 3rem;
+  }
+  .description-water-background {
+    font-size: 19px;
+  }
+  .mobile-hight-image {
+    height: 13vh;
+  }
+  .section-second-container {
+    margin-top: 0rem;
+    padding: 2rem 3rem 3rem 3rem;
+  }
+}
+
 @media (max-width: 991px) {
+  .description-water-background {
+    font-size: 19px;
+  }
+
+  .outer-rcmi-wrapper {
+    margin-top: 4%;
+    padding: 3rem 14rem;
+  }
+
+  .card-index-features-container {
+    padding: 1rem 0rem;
+  }
+
+  .none-property {
+    display: none;
+  }
+  .benifits-container-inner {
+    position: relative;
+    padding: 0rem 1rem;
+  }
+
   .child-changemaker-container {
     gap: 1rem;
   }
@@ -1799,18 +2054,14 @@ body::-webkit-scrollbar {
     padding: 1rem 6rem 2rem 1rem;
   }
 
-  /* .right-side-bar {
-        display: none;
-    } */
-
   .section-first-container {
     height: max-content;
-    grid-template-columns: 1fr;
-    padding: 2rem 1rem 1rem 1rem;
+    grid-template-columns: 1fr 40%;
+    padding: 5rem 4rem 1rem 4rem;
   }
 
   .card-info-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 1fr);
     padding: 10px 0rem;
     gap: 1rem;
   }
@@ -1821,7 +2072,7 @@ body::-webkit-scrollbar {
   }
 
   .benifit-box-school-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .footer-container {
@@ -1858,20 +2109,20 @@ body::-webkit-scrollbar {
   }
 
   .title-section-1 {
-    font-size: 23px;
+    font-size: 30px;
     line-height: 38px;
   }
 
   .become-change-btn {
-    font-size: 14px;
+    font-size: 19px;
   }
 
   .how-this-works-btn {
-    font-size: 14px;
+    font-size: 17px;
   }
 
   .inner-section-container {
-    gap: 0rem;
+    gap: 1rem;
   }
 
   .button-changes-container {
@@ -1891,7 +2142,7 @@ body::-webkit-scrollbar {
   }
 
   .description-features-bottom {
-    font-size: 15px;
+    font-size: 17px;
   }
 
   .title-of-card {
@@ -1916,7 +2167,7 @@ body::-webkit-scrollbar {
   }
 
   .benifit-title-text {
-    font-size: 18px;
+    font-size: 22px;
     margin-bottom: 0rem;
   }
 
@@ -2021,8 +2272,17 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 800px) {
+  .description-university-text {
+    font-size: 13px;
+  }
+
+  .outer-rcmi-wrapper {
+    padding: 1rem 12rem;
+    margin-top: 4%;
+  }
+
   .description-water-background {
-    font-size: 23px;
+    font-size: 24px;
   }
 
   .features-text-card {
@@ -2042,7 +2302,7 @@ body::-webkit-scrollbar {
   }
 
   .mobile-hight-image {
-    height: 20vh !important;
+    height: 15vh !important;
   }
 
   .card-index-features-container {
@@ -2178,7 +2438,7 @@ body::-webkit-scrollbar {
   }
 
   .card-info-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(3, 1fr);
     padding: 10px 1rem;
     gap: 1rem;
   }
@@ -2189,7 +2449,8 @@ body::-webkit-scrollbar {
   }
 
   .benifit-box-school-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
   }
 
   .footer-container {
@@ -2204,7 +2465,7 @@ body::-webkit-scrollbar {
   }
 
   .container-benifit-school {
-    padding: 1rem 1rem 4rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     gap: 1rem;
   }
 
@@ -2217,7 +2478,7 @@ body::-webkit-scrollbar {
     } */
 
   .card-info-box {
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 58%;
     gap: 1rem;
   }
 
@@ -2226,7 +2487,7 @@ body::-webkit-scrollbar {
   }
 
   .title-section-1 {
-    font-size: 23px;
+    font-size: 31px;
     line-height: 38px;
   }
 
@@ -2239,7 +2500,7 @@ body::-webkit-scrollbar {
   }
 
   .inner-section-container {
-    gap: 0rem;
+    gap: 1rem;
   }
 
   .button-changes-container {
@@ -2277,10 +2538,6 @@ body::-webkit-scrollbar {
 
   .bottom-data-benifit-description {
     font-size: 15px;
-  }
-
-  .benifit-box-school-container {
-    gap: 1rem;
   }
 
   .benifit-title-text {
@@ -2390,7 +2647,7 @@ body::-webkit-scrollbar {
 
 @media (max-width: 700px) {
   .description-water-background {
-    font-size: 23px;
+    font-size: 21px;
   }
 
   .features-text-card {
@@ -3415,6 +3672,10 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 530px) {
+  .description-water-background {
+    font-size: 19px;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -3757,6 +4018,10 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 480px) {
+  .description-water-background {
+    font-size: 18px;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -4104,6 +4369,10 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 450px) {
+  .description-water-background {
+    font-size: 19px;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -4449,6 +4718,37 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 440px) {
+  .container-main-individual {
+    padding-top: 2rem;
+  }
+
+  .impact-text-slide {
+    font-size: 50px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .bottom-impact-container {
+    grid-template-columns: 1fr;
+  }
+
+  .individual-slide-inner {
+    background-color: #f3f3f3;
+  }
+  .impact-description-slide {
+    font-size: 24px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: 1fr;
+  }
+
+  .description-water-background {
+    font-size: 18px;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -4795,6 +5095,37 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 400px) {
+  .container-main-individual {
+    padding-top: 2rem;
+  }
+
+  .impact-text-slide {
+    font-size: 50px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .bottom-impact-container {
+    grid-template-columns: 1fr;
+  }
+
+  .individual-slide-inner {
+    background-color: #f3f3f3;
+  }
+  .impact-description-slide {
+    font-size: 24px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: 1fr;
+  }
+
+  .description-water-background {
+    font-size: 17px;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -5141,6 +5472,33 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 390px) {
+  .impact-text-slide {
+    font-size: 50px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .bottom-impact-container {
+    grid-template-columns: 1fr;
+  }
+
+  .individual-slide-inner {
+    background-color: #f3f3f3;
+  }
+  .impact-description-slide {
+    font-size: 24px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: 1fr;
+  }
+
+  .description-water-background {
+    font-size: 17px;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -5207,6 +5565,7 @@ body::-webkit-scrollbar {
 
   .impact-section-container {
     gap: 0rem;
+    margin-top: 3%;
   }
 
   .inforamtion-card-container {
@@ -5485,6 +5844,29 @@ body::-webkit-scrollbar {
 }
 
 @media (max-width: 375px) {
+  .impact-text-slide {
+    font-size: 50px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .bottom-impact-container {
+    grid-template-columns: 1fr;
+  }
+
+  .individual-slide-inner {
+    background-color: #f3f3f3;
+  }
+  .impact-description-slide {
+    font-size: 24px;
+  }
+
+  .top-slider-imapct-container {
+    grid-template-columns: 1fr;
+  }
+
   .features-text-card {
     font-size: 20px;
   }
@@ -5500,9 +5882,12 @@ body::-webkit-scrollbar {
   .none-property {
     display: none;
   }
+  .description-water-background {
+    font-size: 16px;
+  }
 
   .mobile-hight-image {
-    height: 20vh !important;
+    height: 18vh !important;
   }
 
   .card-index-features-container {
@@ -5743,11 +6128,11 @@ body::-webkit-scrollbar {
   }
 
   .become-change-btn {
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .how-this-works-btn {
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .inner-section-container {
