--- a/css/orchid-school.css
+++ b/css/orchid-school.css
@@ -113,7 +113,8 @@
   background-color: #f2f2f2;
   border-radius: 12px;
   display: grid;
-  grid-template-columns: 1fr 40%;
+  /* grid-template-columns: 1fr 40%; */
+  grid-template-rows:1fr;
   padding: 3rem 3rem;
   gap: 1rem;
 }
@@ -125,8 +126,14 @@
 }
 .left-side-content-inner-top {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+}
+
+.new-bottom-container{
+    display: grid;
+    grid-template-columns: 1fr 32.7%;
+    gap: 1rem;
 }
 
 .top-cards-dashboard {
@@ -242,7 +249,7 @@
 }
 
 .sdg-img-box {
-  width: 20%;
+  width: 15%;
 }
 .sdg-img-box > img {
   width: 100%;
@@ -284,12 +291,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 2rem 5rem;
+  padding: 2rem 3rem;
 }
 
 .notional-education-text {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
   color: #000000;
   justify-self: center;
@@ -337,7 +344,6 @@
 .student-impact-container {
   width: 100vw;
   height: 70vh;
-  /* background-color: lightblue; */
   position: relative;
 }
 
@@ -537,6 +543,10 @@
 
 @media(max-width:1180px){
 
+    .right-top-content-i {
+            height: 32vh;
+        }
+
     .rallives-foundation-tab-box {
             height: 100vh;
         }
@@ -619,6 +629,10 @@
 
 @media(max-width:1024px){
 
+    .right-top-content-i{
+        height: 32vh;
+    }
+
     .rallives-foundation-tab-box{
         height: 100vh;
     }
@@ -700,6 +714,11 @@
 
 
 @media(max-width:991px){
+
+    .new-bottom-container{
+        grid-template-columns: 1fr;
+    }
+
     .image-student-changemaker>img {
             height: 107px;
         }
@@ -722,7 +741,7 @@
         }
     
         .left-side-content-inner-top {
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns:1fr;
         }
     
         .student-impact-cards-container {
@@ -862,6 +881,10 @@
 
 @media(max-width:800px){
 
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
     .image-student-changemaker>img {
             height: 107px;
         }
@@ -884,7 +907,7 @@
         }
     
         .left-side-content-inner-top {
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns:1fr;
         }
     
         .student-impact-cards-container {
@@ -1024,6 +1047,10 @@
 
 @media(max-width:700px){
 
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
     .image-student-changemaker>img {
             height: 107px;
         }
@@ -1047,7 +1074,7 @@
         }
     
         .left-side-content-inner-top {
-            grid-template-columns: repeat(2,1fr);
+            grid-template-columns: 1fr;
         }
     
         .student-impact-cards-container {
@@ -1186,6 +1213,11 @@
 }
 
 @media(max-width:650px){
+
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
     .image-student-changemaker>img {
             height: 107px;
         }
@@ -1344,6 +1376,10 @@
 
 @media(max-width:570px){
 
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
     .devlopement-goal-box {
     padding: 0rem 6rem;
     }
@@ -1501,6 +1537,10 @@
 }
 
 @media(max-width:530px){
+
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
 
     .devlopement-goal-box {
      padding: 0rem 3rem;
@@ -1661,6 +1701,10 @@
 
 @media(max-width:480px){
 
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
      .devlopement-goal-box {
      padding: 0rem 2rem;
      }
@@ -1817,6 +1861,10 @@
 
 @media(max-width:450px){
 
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
     .devlopement-goal-box {
      padding: 0rem 2rem;
     }
@@ -1971,6 +2019,10 @@
 }
 
 @media(max-width:440px){
+
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
 
     .devlopement-goal-box {
      padding: 0rem 2rem;
@@ -2127,6 +2179,10 @@
 
 @media(max-width:400px){
 
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
+
     .devlopement-goal-box {
      padding: 0rem 2rem;
     }
@@ -2280,6 +2336,10 @@
 }
 
 @media(max-width:390px){
+
+    .new-bottom-container {
+            grid-template-columns: 1fr;
+        }
 
     .devlopement-goal-box {
      padding: 0rem 2rem;
@@ -2437,6 +2497,10 @@
 }
 
 @media (max-width: 375px) {
+
+    .new-bottom-container{
+        grid-template-columns: 1fr;
+    }
 
     .devlopement-goal-box {
         padding: 0rem 2rem;
